# Project-Nova

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindWebView.cmake  Findcpp-ipc.cmake  Findeventpp.cmake  Findseasocks.cmake  Findspdlog.cmake
src/: CMakeLists.txt  main.cpp
src/UI/: serverlogger.cpp  serverlogger.h  uiwindow.cpp  uiwindow.h  webserver.cpp  webserver.h
src/core/: novacore.cpp  novacore.h
src/demo/: CMakeLists.txt  demo.cpp
src/logger/: logger.cpp  logger.h
src/service/: novaservice.cpp  novaservice.h  serviceAPI.h
src/windowmanager/: compositorlogger.cpp  compositorlogger.h  novawmpolicy.cpp  novawmpolicy.h  windowmanager.cpp  windowmanager.h
web/: index.html
web/assets/: index-5009d496.js  index-bf1be918.css
